objects/MHS_MODS_Details__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>This field is for MSL Project</description>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comman_Name__c</fullName>
        <description>This field is MSL Project</description>
        <label>Comman Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODS_Contact_ID__c</fullName>
        <description>This Field is used for MSL Project</description>
        <label>MODS Contact ID</label>
        <referenceTo>MSL_MODS_Contact__c</referenceTo>
        <relationshipName>R00N30000001pdAHEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <description>This field is for MSL Project</description>
        <label>Offer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Event_Number__c</fullName>
        <description>This field is for MSL Project</description>
        <externalId>true</externalId>
        <label>Source Event Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Name__c</fullName>
        <description>This field is for MSL Project</description>
        <externalId>true</externalId>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>This field is for MSL Project</description>
        <label>Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketing History Detail</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Marketing History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>